# api_test

./: .env.dev  .env.prod  .env.test  README.md  conftest.py  main.py  pyproject.toml
cases/: test_login.json  test_user.yaml
config/: paths.py  settings.py
core/: api_client.py  ddt.py  mysql_client.py
models/db_models/: db_user_model.py
models/response_models/: base_response_model.py  user_model.py
reports/: report_2026-02-20_18-17-46.html
tests/: test_user_api.py
utils/: assertions.py  clean_old_reports.py  data_loader.py  logger.py  notifier.py
