[project]
name = "api-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbutils>=3.1.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "pytest>=9.0.2",
    "pytest-html>=4.2.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "responses>=0.26.0",
    "sqlalchemy>=2.0.46",
]


[tool.pytest.ini_options]
addopts = """
    -s
    --capture=no
    -q
"""

#  --tb=no
